Fixed IVvariation again

--- a/configs/config_emerald_mudkip_abraful.ini
+++ b/configs/config_emerald_mudkip_abraful.ini
@@ -38,6 +38,6 @@ routeFile = routes/emerald_mudkip_abraful.txt
 [util]
 overallChanceKO = true
 showGuarantees = true
-printxitems = true
-printrarecandies = true
-printstatboosters = true
+# printxitems = true
+# printrarecandies = true
+# printstatboosters = true
