Various fixes and improvements

--- a/configs/config_dp_glitchless_chimchar.ini
+++ b/configs/config_dp_glitchless_chimchar.ini
@@ -2,41 +2,51 @@
 game = diamond
 
 [poke]
-# CC08142A(f157), Naughty, 25/31/26/30/27/31, HP 69 Grass
+# Seed 0xCC08142A, frame 157 (HP 69 Grass)
 level = 5
 species = Chimchar
 nature = Naughty
 ability = Blaze
 gender = Male
-# IVs are from 0-31. defaults to 31s if not entered
 hpIV = 25
 atkIV = 31
 defIV = 26
 spaIV = 30
 spdIV = 27
 speIV = 31
-boostedExp = false
-pokerus = false
+##Options below are optional
+# boostedExp = false
+# pokerus = false
+# hpEV  = 0
+# atkEV = 0
+# defEV = 0
+# spaEV = 0
+# spdEV = 0
+# speEV = 0
 
 [files]
-# location of your route file
 routeFile = routes/dp_glitchless_chimchar.txt
-# location of your output file
-outputFile = outputs/out_dp_glitchless_chimchar.txt
 
-# If you only need vanilla games data, keep the following lines commented.
-# If you activate one line below, it will overwrite default game settings.
-# !!! Not active yet !!!
-# charValuesFile = char_values_rs.json
-# itemFile = item_data_rs.json
-# trainerFile = trainer_data_rs.json
-# moveFile = move_data_rs.json
-# learnsetFile = learnset_data_rs.json
-# speciesFile = species_data_rs.json
+##Options below are optional
+# outputFile = outputs/out_dp_glitchless_chimchar.txt
 
+
+##All the options below are optional
 [util]
+# 0 (Nothing)/ 1 (Some) / 2 (Most) / 3 (Everything) || Recommanded : 1
+defaultOutputDetails = 1
+
+# true / false
+defaultShowStatsOnLevelUp = true
+
+# true / false
+defaultShowStatRangesOnLevelUp = false
+
+# true / false || Can slow down compilation with more than a dozen trainers
+defaultIvVariation = false
+
+# true / false
 overallChanceKO = true
+
+# true / false
 showGuarantees = true
-printxitems = true
-printrarecandies = true
-printstatboosters = true
