--- a/configs/config_emerald_glitchless_abraful_castform.ini
+++ b/configs/config_emerald_glitchless_abraful_castform.ini
@@ -2,18 +2,17 @@
 game = emerald
 
 [poke]
-# Mudkip's frame : 1026 | Seed : 0
-level = 5
-species = mudkip 
-nature = naughty
-ability = torrent
+level = 25
+species = castform 
+nature = gentle
+ability = forecast
 gender = male
-hpIV = 21
-atkIV = 23
-defIV = 28
-spaIV = 30
-spdIV = 29
-speIV = 29
+hpIV = 0
+atkIV = 0
+defIV = 0
+spaIV = 0
+spdIV = 0
+speIV = 0
 ##Options below are optional
 # boostedExp = false
 # pokerus = false
@@ -25,11 +24,10 @@ speIV = 29
 # speEV = 0
 
 [files]
-routeFile = routes/emerald_glitchless_abraful_mudkip.txt
+routeFile = routes/emerald_glitchess_abraful_castform.txt
 
 ##Options below are optional
-# outputFile = outputs/out_emerald_glitchless_abraful_mudkip.txt
-
+# outputFile = outputs/out_emerald_glitchess_abraful_castform.txt
 
 ##All the options below are optional
 [util]
@@ -37,13 +35,13 @@ routeFile = routes/emerald_glitchless_abraful_mudkip.txt
 defaultOutputDetails = 1
 
 # true / false
-defaultShowStatsOnLevelUp = true
+defaultShowStatsOnLevelUp = false
 
 # true / false
-defaultShowStatRangesOnLevelUp = false
+defaultShowStatRangesOnLevelUp = true
 
 # true / false || Can slow down compilation with more than a dozen trainers
-defaultIvVariation = false
+defaultIvVariation = true
 
 # true / false
 overallChanceKO = true
