--- a/configs/config_emerald_glitchless_abraful_rayquaza_ivvariation.ini
+++ b/configs/config_emerald_glitchless_abraful_rayquaza_ivvariation.ini
@@ -2,18 +2,24 @@
 game = emerald
 
 [poke]
-# Mudkip's frame : 1026 | Seed : 0
-level = 5
-species = mudkip 
-nature = naughty
-ability = torrent
-gender = male
-hpIV = 21
-atkIV = 23
-defIV = 28
-spaIV = 30
-spdIV = 29
-speIV = 29
+# Rayquaza cluster
+# 1 | Relaxed (1)  2/31/ 7/19/ 5/19  
+# 2 | Relaxed (2) 19/19/ 5/30/30/ 3  
+# 3 | Brave (1)    3/30/30/25/12/13
+# 4 | Adamant     13/25/12/29/28/28
+# 5 | Quiet       28/29/28/23/13/20
+# 6 | Brave (2)   20/23/13/11/ 9/17 
+species = rayquaza 
+level = 70
+nature = brave
+ability = airlock
+gender = genderless
+hpIV  = 3
+atkIV = 30
+defIV = 30
+spaIV = 25
+spdIV = 12
+speIV = 13
 ##Options below are optional
 # boostedExp = false
 # pokerus = false
@@ -25,10 +31,10 @@ speIV = 29
 # speEV = 0
 
 [files]
-routeFile = routes/emerald_glitchless_abraful_mudkip.txt
+routeFile = routes/emerald_glitchless_abraful_rayquaza_ivvariation.txt
 
 ##Options below are optional
-# outputFile = outputs/out_emerald_glitchless_abraful_mudkip.txt
+# outputFile = outputs/out_emerald_rayquaza_adamant.txt
 
 
 ##All the options below are optional
@@ -43,7 +49,7 @@ defaultShowStatsOnLevelUp = true
 defaultShowStatRangesOnLevelUp = false
 
 # true / false || Can slow down compilation with more than a dozen trainers
-defaultIvVariation = false
+defaultIvVariation = true
 
 # true / false
 overallChanceKO = true
