--- a/master.ini
+++ b/master.ini
@@ -1,6 +1,7 @@
 [master]
 # config file to use
-configFile = configs/config_emerald_glitchless_abraful_rayquaza_ivvariation.ini
+#configFile = configs/config_pt_glitchless_gyarados_magikarp.ini
+configFile = configs/config_pt_glitchless_gyarados_chimchar.ini
 
 # debug file to use
 debugFile = debug.txt
