--- a/configs/config_frlg_squirtle-test-french.ini
+++ b/configs/config_frlg_squirtle-test-french.ini
@@ -1,9 +1,10 @@
 [game]
 # ruby, sapphire, emerald, firered or leafgreen
 game = leafgreen
+language = french
 
 [poke]
-species = squirtle 
+species = squirtle
 level = 5
 nature = rash
 ability = torrent
@@ -20,9 +21,9 @@ pokerus = false
 
 [files]
 # location of your route file
-routeFile = routes/frlg_squirtle.txt
+routeFile = routes/frlg_squirtle-test-french.txt
 # location of your output file
-outputFile = outputs/out_frlg_squirtle.txt
+outputFile = outputs/out_frlg_squirtle-test-french.txt
 
 # If you only need vanilla games data, keep the following lines commented.
 # If you activate one line below, it will overwrite default game settings.
@@ -35,8 +36,8 @@ outputFile = outputs/out_frlg_squirtle.txt
 # speciesFile = species_data_rs.json
 
 [util]
+defaultShowStatsOnLevelUp = true
+defaultShowStatRangesOnLevelUp = false
+defaultIvVariation = false
 overallChanceKO = true
 showGuarantees = true
-printxitems = true
-printrarecandies = true
-printstatboosters = true
